test/compile-fail/scope/use-no-name-multi/expected.txt
error: unresolved import `c`
 --> top.rhdl:7:7
  |
7 | use a::c;
  |        ^ no `c` in `a`
